--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>ar.mppfiles</groupId>
+            <artifactId>utils-validation.simple</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
