--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.javalite</groupId>
             <artifactId>activeweb</artifactId>
-            <version>2.3</version>
+            <version>2.3.1-j8</version>
             <type>jar</type>
         </dependency>
         <dependency>
